@@ -11,7 +11,7 @@ local lib = {
   type = 'dub.MemoryStorage', 
 }
 -- Pattern to check for Doxygen version
-local DOXYGEN_VERSION = "1%.7%."
+local DOXYGEN_VERSIONS = {"1%.7%.", "1%.8%."}
 local private = {}
 local parse   = {}
 lib.__index   = lib
@@ -307,7 +307,7 @@ function lib:resolveType(scope, name)
   end
   -- not found (could be a native type)
   self.resolved_cache[fullname] = false
-  return nil
+  return false
 end
 
 function lib:fullname()
@@ -424,6 +424,7 @@ function parse:header(header, not_lazy)
     }
     if string.match(namespace.name, '::') then
       -- Ignore: nested namespaces not supported now.
+      dub.warn("Ignoring nested namespace '%s'.", namespace.name)
       return
     end
     if self.cache[namespace.name] then
@@ -486,6 +487,7 @@ function parse:innernamespace(elem, header)
   if self.type ~= 'dub.MemoryStorage' or
    string.match(name, '::') then
     -- Ignore nested namespaces for now.
+    dub.warn("Ignoring nested namespace '%s'.", name)
     return
   end
   local namespace = dub.Namespace {
@@ -498,18 +500,20 @@ function parse:innernamespace(elem, header)
 end
 
 function parse:innerclass(elem, header, not_lazy)
-  local name  = elem[1]
+  local fullname = elem[1]
+  local name = fullname
   local parent = self
-  if string.match(name, '::') then
+  if string.match(fullname, '::') then
     -- inside a namespace or class
     parent = self.db or self
-    local parts = lk.split(name, '::')
+    local parts = lk.split(fullname, '::')
     local i = #parts
     name = parts[i]
     parts[i] = nil
     for i, part in ipairs(parts) do
       local child = parent.cache[part]
       if not child then
+        dub.warn("Ignoring class '%s'.", fullname)
         -- Ignore: this can be due to nested namespaces.
         return nil
         --assert(false, "Could not find parent '"..part.."' in '"..parent:fullname().."'.")
@@ -1202,9 +1206,17 @@ function private.checkDoxygenVersion(data)
   local str = (data:find('doxygen') or {version='???'}).version
   if not checked_versions[str] then
     checked_versions[str] = true
-    local pattern = '^'..DOXYGEN_VERSION
-    if not string.match(str, pattern) then
-      print(string.format("WARNING: XML generated by Doxygen '%s'. This version of Dub was tested with version '%s'.", str, DOXYGEN_VERSION))
+    local ok = false
+    local versions = {}
+    for pat in ipairs(DOXYGEN_VERSIONS) do
+      table.insert(versions, string.gsub(pat,'%%','')..'x')
+      if string.match(str, '^'..pat) then
+        ok = true
+        break
+      end
+    end
+    if not ok then
+      dub.warn("WARNING: XML generated by Doxygen '%s'. This version of Dub was tested with versions %s.", str, lk.join(versions, ', '))
     end
   end
 end
