@@ -14,5 +14,20 @@ public:
     : Parent(name, s, birth_year) {}
 };
 
+
+/** This class is not seed by Doxygen or Dub. Instances of this class
+ * are passed around as opaque types.
+ */
+class Unk1 {
+  double v_;
+public:
+  Unk1(double v) : v_(v) {}
+  double value() {
+    return v_;
+  }
+};
+
+typedef Unk1 Unk2;
+
 #endif // INHERIT_HIDDEN_MOTHER_H_
 
