@@ -69,6 +69,9 @@ function should.listSuperMethods()
     'Child',
     'x',
     'y',
+    'returnUnk1',
+    'returnUnk2',
+    'methodWithUnknown',
     'name',
     'computeAge',
     'position',
